# numgen

./: .gitignore  README.md  conf.py  pyproject.toml  server.py
app/internal/generators/: inn.py  snils.py
app/internal/types/: generators.py
app/internal/utils/: code.py
app/routers/: generate.py
front/: package-lock.json  package.json
front/public/: index.html
front/src/: App.jsx  index.js
front/src/components/: Generator.jsx  generator.css
front/src/layout/: Header.jsx  header.css
front/src/views/: Home.jsx  home.css
generator/services/: inn.py
generator/utils/: code.py
tests/generator/services/: test_inn.py
tests/generator/utils/: test_code.py
tests/internal/generators/: test_inn.py  test_snils.py
tests/internal/utils/: test_code.py
