[tool.poetry]
name = "numgen"
version = "0.1.0"
description = ""
authors = ["rtplv <rtplv@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.74.0"
uvicorn = {extras = ["standard"], version = "^0.17.5"}
pytest = "^7.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
